# giant-checklists

./: Dockerfile  Makefile  README.md  manage.py  pyproject.toml  setup.cfg
.github/workflows/: build-test.yml  deploy-branch.yml  deploy-dev.yml  deploy-live.yml  ecologi.yml  lint.yml
checklists/: admin.py  factories.py  forms.py  models.py  urls.py  views.py
checklists/migrations/: 0001_initial.py  0002_auto_20170809_0757.py  0003_checklist_completed.py  0004_checklistevent.py  0005_auto_20170809_2009.py  0006_checklistitemcomment.py  0007_checklistitem_original_item.py  0008_auto_20231221_0712.py  0008_auto_20240408_0449.py  0008_checklist_archived.py  0008_checklistitem_is_not_applicable.py  0009_alter_checklistitem_checklist.py  0009_auto_20240315_0832.py  0009_auto_20240408_0542.py  0010_auto_20240412_1248.py  0010_auto_20240507_0953.py
checklists/tests/: test_forms.py  test_views.py
core/: context_processors.py  settings.py  urls.py  utils.py
core/templates/: base.html
core/templates/checklists/: complete.html  create.html  delete.html  detail.html  index.html  mark_as_complete.html  type.html
templates/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
templates/migrations/: 0001_initial.py  0002_template_author.py  0003_templateitem_position.py  0004_auto_20170807_1522.py  0005_templateitemcomment_resolved.py  0006_template_is_active.py  0007_templateitem_is_active.py  0008_template_description.py  0009_auto_20180208_1111.py  0010_auto_20240412_1213.py
users/: context_processors.py  forms.py  models.py  tests.py  views.py
(+13 files in other folders)
