[tool.poetry]
name = "giant-wiki"
version = "0.1.0"
description = ""
authors = ["Jon Atkinson <jon.atkinson@giantmade.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.20"
dj-database-url = "^0.5.0"
django-crispy-forms = "^1.11.1"
gunicorn = "^20.0.4"
loguru = "^0.5.3"
Markdown = "^3.3.4"
whitenoise = "^5.2.0"
elasticsearch-dsl = ">=6.0.0,<7.0.0"
django-elasticsearch-dsl = "6.5.0"
django-environ = "^0.8.1"
django-cas-ng = "^4.3.0"
django-positions = "^0.6.0"
django-cors-headers = "^3.13.0"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 99
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.ipython
  | \.mypy_cache
  | \.ropeproject
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | migrations
)/
'''
